--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "page where we can adopt pet",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write \"src/**/*.{js, jsx}",
     "test": "npm run test"
   },
   "author": "Patryk Wierzbowski",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1"
+  }
 }
