--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "page where we can adopt pet",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"src/**/*.{js, jsx}",
+    "format": "prettier --write \"src/**/*.{js, jsx}\"",
+    "lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
     "test": "npm run test"
   },
   "author": "Patryk Wierzbowski",
