feat: create SearchParams componen with useState hook and update eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "plugin:import/errors",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
     "prettier"
   ],
   "rules": {
@@ -29,7 +30,7 @@
     },
     "import/resolver": {
       "node": {
-        "extension": [".js", ".jsx"]
+        "extensions": [".js", ".jsx"]
       }
     }
   }
