--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "adopt-me",
-  "version": "1.0.0",
-  "description": "page where we can adopt pet",
+  "name": "citr-v8-project",
+  "version": "8.0.0",
+  "description": "Complete Intro to React v8 project",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.jsx\"",
-    "lint": "eslint \"src/**/*.jsx\" --quiet",
-    "test": "npm run test"
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
   },
-  "author": "Patryk Wierzbowski",
-  "license": "MIT",
+  "keywords": [],
+  "author": "Brian Holt",
+  "license": "ISC",
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.1.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
-    "prettier": "^2.7.1",
-    "vite": "^3.1.4"
+    "@vitejs/plugin-react": "2.1.0",
+    "eslint": "8.24.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "2.7.1",
+    "vite": "3.1.4"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
